# name: TestActivityLog.test_can_get_top_ten_important_changes
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /**/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.1
  '
  SELECT "posthog_instancesetting"."id",
         "posthog_instancesetting"."key",
         "posthog_instancesetting"."raw_value"
  FROM "posthog_instancesetting"
  WHERE "posthog_instancesetting"."key" = 'constance:posthog:RATE_LIMIT_ENABLED'
  ORDER BY "posthog_instancesetting"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.10
  '
  SELECT "posthog_activitylog"."item_id"
  FROM "posthog_activitylog"
  WHERE ("posthog_activitylog"."activity" IN ('updated',
                                              'exported',
                                              'sharing enabled',
                                              'sharing disabled',
                                              'deleted',
                                              'commented')
         AND "posthog_activitylog"."scope" = 'Comment'
         AND "posthog_activitylog"."team_id" = 2
         AND "posthog_activitylog"."user_id" = 2) /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.11
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.12
  '
  
  SELECT id
  FROM
    (SELECT Row_number() over (PARTITION BY five_minute_window,
                                            activity,
                                            item_id,
                                            scope
                               ORDER BY created_at DESC) AS row_number,
                              *
     FROM
       (-- copied from https://stackoverflow.com/a/43028800
   SELECT to_timestamp(floor(Extract(epoch
                                     FROM created_at) / extract(epoch
                                                                FROM interval '5 min')) * extract(epoch
                                                                                                  FROM interval '5 min')) AS five_minute_window,
          activity,
          item_id,
          scope,
          id,
          created_at
        FROM posthog_activitylog
        WHERE team_id = 2 -- we only really care about de-duplicating Notebook changes,
   -- as multiple actual activities are logged for one logical activity
  
          AND scope = 'Notebook'
          AND NOT (user_id = 2
                   AND user_id IS NOT NULL)
        ORDER BY created_at DESC) AS inner_q) AS counted_q
  WHERE row_number = 2 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.13
  '
  SELECT "posthog_activitylog"."id",
         "posthog_activitylog"."team_id",
         "posthog_activitylog"."organization_id",
         "posthog_activitylog"."user_id",
         "posthog_activitylog"."is_system",
         "posthog_activitylog"."activity",
         "posthog_activitylog"."item_id",
         "posthog_activitylog"."scope",
         "posthog_activitylog"."detail",
         "posthog_activitylog"."created_at"
  FROM "posthog_activitylog"
  WHERE (NOT ("posthog_activitylog"."user_id" = 2
              AND "posthog_activitylog"."user_id" IS NOT NULL)
         AND "posthog_activitylog"."team_id" = 2
         AND (("posthog_activitylog"."scope" = 'FeatureFlag'
               AND "posthog_activitylog"."item_id" IN ('1',
                                                       '2'))
              OR ("posthog_activitylog"."scope" = 'Insight'
                  AND "posthog_activitylog"."item_id" IN ('8',
                                                          '9',
                                                          '10',
                                                          '11',
                                                          '1',
                                                          '2',
                                                          '3',
                                                          '4',
                                                          '5',
                                                          '6',
                                                          '7'))
              OR ("posthog_activitylog"."scope" = 'Notebook'
                  AND "posthog_activitylog"."item_id" IN ('7uiu5fyZ')
                  AND "posthog_activitylog"."id" IN ('018a016f-e528-0000-7861-6753b56fbafd'::uuid,
                                                     '018a01c8-2ad0-0000-649d-370f2d691339'::uuid))))
  ORDER BY "posthog_activitylog"."created_at" DESC
  LIMIT 10 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.14
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.15
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.16
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.17
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.18
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.19
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.2
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.20
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.21
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.22
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.23
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.24
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.25
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.26
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.27
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.28
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.29
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.3
  '
  SELECT "posthog_dashboarditem"."id"
  FROM "posthog_dashboarditem"
  WHERE (NOT ("posthog_dashboarditem"."deleted")
         AND "posthog_dashboarditem"."created_by_id" = 2
         AND "posthog_dashboarditem"."team_id" = 2) /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.30
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.31
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.32
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."requested_password_reset_at",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."theme_mode",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.33
  '
  SELECT "posthog_notificationviewed"."id",
         "posthog_notificationviewed"."user_id",
         "posthog_notificationviewed"."last_viewed_activity_date"
  FROM "posthog_notificationviewed"
  WHERE "posthog_notificationviewed"."user_id" = 2
  ORDER BY "posthog_notificationviewed"."id" ASC
  LIMIT 1 /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.4
  '
  SELECT "posthog_featureflag"."id"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."created_by_id" = 2
         AND "posthog_featureflag"."team_id" = 2) /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.5
  '
  SELECT "posthog_notebook"."short_id"
  FROM "posthog_notebook"
  WHERE ("posthog_notebook"."created_by_id" = 2
         AND "posthog_notebook"."team_id" = 2) /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.6
  '
  SELECT "posthog_comment"."id"
  FROM "posthog_comment"
  WHERE ("posthog_comment"."created_by_id" = 2
         AND "posthog_comment"."team_id" = 2) /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.7
  '
  SELECT "posthog_activitylog"."item_id"
  FROM "posthog_activitylog"
  WHERE ("posthog_activitylog"."activity" IN ('updated',
                                              'exported',
                                              'sharing enabled',
                                              'sharing disabled',
                                              'deleted',
                                              'commented')
         AND "posthog_activitylog"."scope" = 'Insight'
         AND "posthog_activitylog"."team_id" = 2
         AND "posthog_activitylog"."user_id" = 2
         AND NOT ("posthog_activitylog"."item_id" IN ('8',
                                                      '9',
                                                      '10',
                                                      '11',
                                                      '1',
                                                      '2',
                                                      '3',
                                                      '4',
                                                      '5',
                                                      '6',
                                                      '7')
                  AND "posthog_activitylog"."item_id" IS NOT NULL)) /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.8
  '
  SELECT "posthog_activitylog"."item_id"
  FROM "posthog_activitylog"
  WHERE ("posthog_activitylog"."activity" IN ('updated',
                                              'exported',
                                              'sharing enabled',
                                              'sharing disabled',
                                              'deleted',
                                              'commented')
         AND "posthog_activitylog"."scope" = 'Notebook'
         AND "posthog_activitylog"."team_id" = 2
         AND "posthog_activitylog"."user_id" = 2
         AND NOT ("posthog_activitylog"."item_id" IN ('7uiu5fyZ')
                  AND "posthog_activitylog"."item_id" IS NOT NULL)) /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
# name: TestActivityLog.test_can_get_top_ten_important_changes.9
  '
  SELECT "posthog_activitylog"."item_id"
  FROM "posthog_activitylog"
  WHERE ("posthog_activitylog"."activity" IN ('updated',
                                              'exported',
                                              'sharing enabled',
                                              'sharing disabled',
                                              'deleted',
                                              'commented')
         AND "posthog_activitylog"."scope" = 'FeatureFlag'
         AND "posthog_activitylog"."team_id" = 2
         AND "posthog_activitylog"."user_id" = 2
         AND NOT ("posthog_activitylog"."item_id" IN ('1',
                                                      '2')
                  AND "posthog_activitylog"."item_id" IS NOT NULL)) /*controller='project_activity_log-important-changes',route='api/projects/%28%3FP%3Cparent_lookup_team_id%3E%5B%5E/.%5D%2B%29/activity_log/important_changes/%3F%24'*/
  '
---
